client/src/components/Navbar/Navbar.scss
.navbar {
    height: 50px;
    display: flex;
    justify-content: space-between;
    margin-bottom: 20px;
    border-radius: 7px;
    box-shadow: 0px 0px 1px 1px black;
    border: 2px solid #3a5068;
    background-color: #2c3f54;
    color: whitesmoke;

    .logo {
        line-height: 46px;
        font-size: 28px;
        padding: 0 18px;
        text-decoration: none;
        color: whitesmoke;
        font-weight: 700;

        span {
            color: gold;
        }
    }

    .right-side {
        display: flex;

        .item {
            height: 100%;
            display: flex;
            align-items: center;
            padding: 0 20px;
            border-left: 3px solid #3a5068;
            font-weight: 700;
            text-decoration: none;
            color: whitesmoke;

            &.mini {
                padding: 0 12px;
            }

            &.login {
                border-radius: 0 7px 7px 0;
            }

            .icon {
                display: flex;
            }

            &:hover {
                cursor: pointer;
                background-color: #3a5068;
            }
        }
    }
}

